# untzy

./: .gitignore  CMakeLists.txt  README.md
lib/taglib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: duration.cpp  duration.h  logger.cpp  logger.h  player.cpp  player.h  song.cpp  song.h  volume.cpp  volume.h
src/db/: database.cpp  database.h  playlist_row.cpp  playlist_row.h  song_row.cpp  song_row.h
src/engines/: engine.h  gstreamer_engine.cpp  gstreamer_engine.h  gstreamer_pipeline.cpp  gstreamer_pipeline.h  gstreamer_thread.cpp  gstreamer_thread.h
src/playlist/: playlist_model.cpp  playlist_model.h
src/ui/: engine_output.cpp  engine_output.h  engine_output.ui  main_window.cpp  main_window.h  main_window.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  playlist_widget.cpp  playlist_widget.h  playlist_widget.ui  seeker_widget.cpp  seeker_widget.h  seeker_widget.ui
src/ui/widgets/: playlist.cpp  playlist.h  playlist_tab.cpp  playlist_tab.h  seeker.cpp  seeker.h  volume_slider.cpp  volume_slider.h
test/: CMakeLists.txt  db_test.cpp  duration_test.cpp  run_all_tests.cpp  volume_test.cpp
tools/taglib/: CMakeLists.txt  framelist.cpp  strip-id3v1.cpp  tagreader.cpp  tagwriter.cpp
